--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/Favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Breaking Bad - Todos os personagens" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    -->
+
     <title>Breaking Bad</title>
   </head>
   <body>
